k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        # replace PROJECT_ID with your GCP project id
        image: us-east1-docker.pkg.dev/vivek-project-465210/wisecow-repo/wisecow:latest
        ports:
        - containerPort: 4499
        livenessProbe:
          tcpSocket:
            port: 4499
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 4499
          initialDelaySeconds: 2
          periodSeconds: 5
